--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Weather</h2>
+            <h2>Weather App</h2>
             <div class="weather_input">
                 <input type="text" name="city" id="city_input" placeholder="Enter city name">
                 <button type="button" id="searchbtn">
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="weather-right">
-                <h2>Today's Highlights</h2>
+                <h2 id="imp">Today's Highlights</h2>
                 <div class="highlights">
                     <div class="card">
                         <div class="card-head">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-                <h2>Today at</h2>
+                <h2 id="imp2">Today at</h2>
                 <div class="hourly-forecast">
                     <div class="card">
                         <p>9 AM</p>
